(Bug Fix) Bug: Method org.gwt.mosaic.ui.client.table.FixedWidthFlexTable.insertRow(int) invokes inefficient new Integer(int) constructor; use Integer.valueOf(int) instead